--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+* Fri Aug 09 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.6
+- shorten arguments to rpmbuild for srpm builds
+- add %osg macro for rpm builds
+
 * Fri Feb 15 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.5
 - new flag, "--upcoming" for building packages into the new
   el[56]-osg-upcoming koji targets.
