--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* Mon Aug 19 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.7
+- added git support (contrib. by Brian Bockelman)
+
 * Fri Aug 09 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.6
 - shorten arguments to rpmbuild for srpm builds
 - add %osg macro for rpm builds
