--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+* Mon Oct 21 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.0
+- Use first commonName in a cert if there are multiple
+- Rework osg-promote and osg-build to work with the osg-next koji and svn layout
+- Major refactoring of osg-promote
+- Remove 'prerelease' and 'release' routes from osg-promote since they will never be used
+- Remove rpm-ripper -- it was only used for JDK which won't be getting updated in the future
+- Do not allow someone to do OSG builds from the HCC git repo (contrib. by Brian Bockelman)
+- Have osg-import-srpm put upstream URL into the .source file (as a comment) instead of the README
+
 * Mon Aug 26 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.2.8
 - fix syntax error in osg-promote
 
