--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+* Tue Oct 22 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.1
+- Fix target detection in osg-build
+- Fix --upcoming flag in osg-build
+
 * Mon Oct 21 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.0
 - Use first commonName in a cert if there are multiple
 - Rework osg-promote and osg-build to work with the osg-next koji and svn layout
