--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+* ??? ??? ?? ???? Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.2
+
 * Tue Oct 22 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.1
 - Fix target detection in osg-build
 - Fix --upcoming flag in osg-build
