--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 * ??? ??? ?? ???? Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.2
+- Add grid proxy support to osg-koji setup (SOFTWARE-1287)
 
 * Tue Oct 22 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.1
 - Fix target detection in osg-build
