--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 * ??? ??? ?? ???? Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.2
 - Add grid proxy support to osg-koji setup (SOFTWARE-1287)
 - Check client cert for expiration before use (SOFTWARE-1288)
+- Remove long-deprecated 'allbuild' task
 
 * Tue Oct 22 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.1
 - Fix target detection in osg-build
