--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
-* ??? ??? ?? ???? Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.2
+* Wed Dec 11 2013 Carl Edquist <edquist@cs.wisc.edu> - 1.3.2
 - Add grid proxy support to osg-koji setup (SOFTWARE-1287)
 - Check client cert for expiration before use (SOFTWARE-1288)
 - Remove long-deprecated 'allbuild' task
+- Add support for --repo=internal in branches/osg-internal (SOFTWARE-1258)
 
 * Tue Oct 22 2013 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.1
 - Fix target detection in osg-build
