--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
-* ??? ??? ?? 2014 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.3
+* Mon Jan 27 2014 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.3
 - Make client cert check Python 2.4-compatible (SOFTWARE-1366)
+- Allow simultaneous promotions to multiple routes (e.g. both 3.1-testing and 3.2-testing) in osg-promote (SOFTWARE-1289)
+- Refactoring and unit tests for osg-promote
 
 * Wed Dec 11 2013 Carl Edquist <edquist@cs.wisc.edu> - 1.3.2
 - Add grid proxy support to osg-koji setup (SOFTWARE-1287)
