--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+* Tue Feb 25 2014 Carl Edquist <edquist@cs.wisc.edu> - 1.3.4
+- change 'contrib' promotion path to go from development -> contrib instead
+  of testing -> contrib, per the new osg-contrib policy.  (SOFTWARE-1405)
+
 * Mon Jan 27 2014 Matyas Selmeci <matyas@cs.wisc.edu> - 1.3.3
 - Make client cert check Python 2.4-compatible (SOFTWARE-1366)
 - Allow simultaneous promotions to multiple routes (e.g. both 3.1-testing and 3.2-testing) in osg-promote (SOFTWARE-1289)
