--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
   instead of a package directory (SOFTWARE-1278)
 - Fix osg-promote misdetecting repo tag on packages with a dot in the release
   number (e.g. 1.11) (SOFTWARE-1420)
+- Remove logic dealing with the koji tag renaming for osg-next (SOFTWARE-1416)
 - Minor bugfixes
 
 * Tue Feb 25 2014 Carl Edquist <edquist@cs.wisc.edu> - 1.3.4
