--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+* Fri Mar 21 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.5
 - Allow multiple routes separated by commas in '-r', for osg-promote
   and fix usage message (SOFTWARE-1390)
 - Add repo hints for condor and perfsonar repos (SOFTWARE-1413, SOFTWARE-1392)
