--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- osg-koji setup no longer downloads deprecated DOEGrids certs (SOFTWARE-1437)
+
 * Fri Mar 21 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.5
 - Allow multiple routes separated by commas in '-r', for osg-promote
   and fix usage message (SOFTWARE-1390)
