--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
+* Mon Apr 7 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.6
 - osg-koji setup no longer downloads deprecated DOEGrids certs (SOFTWARE-1437)
+- Tweak client.crt creation in osg-koji setup to insert newline between cert
+  and key and convert line endings
 
 * Fri Mar 21 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.5
 - Allow multiple routes separated by commas in '-r', for osg-promote
