--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* Mon May 5 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.7
+- Fix race condition in osg-koji setup (SOFTWARE-1466)
+
 * Mon Apr 7 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.6
 - osg-koji setup no longer downloads deprecated DOEGrids certs (SOFTWARE-1437)
 - Tweak client.crt creation in osg-koji setup to insert newline between cert
