--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* Mon Jun 23 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.8
+- Add koji-blame, a tool for listing koji tagging history (SOFTWARE-1113)
+
 * Mon May 5 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.7
 - Fix race condition in osg-koji setup (SOFTWARE-1466)
 
