--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* ??? ??? ?? 2014 ? ? <?> - 1.4.0
+- EL7 support for osg-build (SOFTWARE-1429)
+
 * Mon Jun 23 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.3.8
 - Add koji-blame, a tool for listing koji tagging history (SOFTWARE-1113)
 
