--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+* Tue Sep 30 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.4.1
+- Text fixes
+- Exit nonzero if watched builds fail
+- Do not promote el7 unless --el7 flag is passed (SOFTWARE-1586)
 - Add --background option for koji builds to lower priority
 
 * Mon Aug 11 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.4.0
