--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,7 @@
 - Text fixes
 - Exit nonzero if watched builds fail
 - Do not promote el7 unless --el7 flag is passed (SOFTWARE-1586)
-- Add --background option for koji builds to lower priority
+- Add --background option for koji builds to lower priority (SOFTWARE-1609)
 
 * Mon Aug 11 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.4.0
 - EL7 support for osg-build (SOFTWARE-1429)
