Don't require a cert when doing a mock build using a koji config
git-svn-id: https://vdt.cs.wisc.edu/svn/software/osg-build/trunk@20137 4e558342-562e-0410-864c-e07659590f8c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- Don't require a cert when doing a mock build using a koji config
+
 * Tue Sep 30 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.4.1
 - Text fixes
 - Exit nonzero if watched builds fail
