--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+* Wed Dec 17 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.4.3
+- Add retry loop to watching tasks (SOFTWARE-1343)
+- Allow --target-arch option on scratch koji builds (SOFTWARE-1629)
+- Handle mixed git/svn directories (SOFTWARE-1247)
+- Update usage text
+
 * Mon Dec 1 2014 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.4.2
 - Don't require a cert when doing a mock build using a koji config
 - Change contrib promotion route to go from testing to contrib instead of
