--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* ??? ??? ?? 2015 Mátyás Selmeci <matyas@cs.wisc.edu> - ?.?.?
+- Build for el6 and el7 for OSG 3.3 by default (instead of el5 and el6)
+
 * Tue Apr 14 2015 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.4.4
 - Add log line with destination SRPM path for osg-build prebuild
 - Increase max retries for watching koji tasks
