--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+* Mon Aug 17 2015 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.6.1
+- Make el6 and el7 the default dvers for trunk
+- Fix unit tests to work with osg-el5 koji target missing
+- Change 'contrib', 'prerelease', and 'testing' promotion paths to point to 3.3 instead of 3.2
+
 * Thu Jul 30 2015 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.6.0
 - Add promotion routes for goc repos (SOFTWARE-1969)
 - Read promotion route definitions from an ini file instead of guessing from available Koji tags
