Add ChangeLog entry for SOFTWARE-2116
git-svn-id: https://vdt.cs.wisc.edu/svn/software/osg-build/trunk@22470 4e558342-562e-0410-864c-e07659590f8c

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,5 @@
+- Change osg-promote table layout to sort by build and put the build first (SOFTWARE-2116)
+
 * Mon Aug 17 2015 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.6.1
 - Make el6 and el7 the default dvers for trunk
 - Fix unit tests to work with osg-el5 koji target missing
