--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+* Fri Feb 19 2016 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.6.2
 - Change osg-promote table layout to sort by build and put the build first (SOFTWARE-2116)
 
 * Mon Aug 17 2015 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.6.1
