--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,4 @@
+* Tue Apr 12 2016 Matyas Selmeci <matyas@cs.wisc.edu> - 1.6.3
 - osg-koji setup: add CILogon-OSG CA cert to osg-ca-certs.crt (SOFTWARE-2273)
 
 * Fri Feb 19 2016 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.6.2
