Add last-minute changes to 1.7.0 (SOFTWARE-2422)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,11 @@
 Unreleased
+
+* Fri Aug 05 2016 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.7.0
+- Add three-way diff functionality (--diff3 or -3) to osg-import-srpm
 - Make osg-build log messages look nicer by replacing the
   'LOGLEVEL:osg-build:' prefix with a plain ' >> '
+- Remove broken test_mock_auto_cfg
 - Tweak language in osg-import-srpm when creating .source files
-
-* Thu Aug 04 2016 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.7.0
-- Add three-way diff functionality (--diff3 or -3) to osg-import-srpm
 
 * Mon Jun 27 2016 Carl Edquist <edquist@cs.wisc.edu> - 1.6.4
 - Rename koji-hub.batlab.org to koji.chtc.wisc.edu (SOFTWARE-2175)
