--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Unreleased
 - Make osg-build log messages look nicer by replacing the
   'LOGLEVEL:osg-build:' prefix with a plain ' >> '
+- Tweak language in osg-import-srpm when creating .source files
 
 * Thu Aug 04 2016 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.7.0
 - Add three-way diff functionality (--diff3 or -3) to osg-import-srpm
