--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 Unreleased
+- Don't print "Implicitly building for el..." message unless in verbose mode
 
 * Fri Aug 05 2016 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.7.0
 - Add three-way diff functionality (--diff3 or -3) to osg-import-srpm
