--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+* Tue Apr 04 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.8.1
+- Set 'use_old_ssl=True' in template user config to work around SOFTWARE-2616
+
 * Wed Feb 01 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.8.0
 - Use koji 1.11 on CSL systems and update template config to koji 1.7+ version
   (adds dependency on koji >= 1.7) (SOFTWARE-2566)
