--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+* Tue Apr 25 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.8.90
+- Make koji and mock optional modules that can be shipped as separate
+  subpackages and will be loaded if necessary. (SOFTWARE-2671)
+- Improve `osg-build --help` text to be more consistent and show default
+  values for options. (SOFTWARE-2558)
+- Drop Python 2.4 compatibility
+- Add support for OSG 3.4 (SOFTWARE-2693)
+- Add new .source file syntax to fetch sources directly from Git repos
+  (SOFTWARE-2689)
+
 * Tue Apr 04 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.8.1
 - Set 'use_old_ssl=True' in template user config to work around SOFTWARE-2616
 
