--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
+* Wed Apr 26 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.8.92
+- Various fetch_sources fixes (SOFTWARE-2689)
+
 * Tue Apr 25 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.8.91
-- Fix Python 2.6 compat in fetch_sources
+- Fix Python 2.6 compat in fetch_sources (SOFTWARE-2689)
 
 * Tue Apr 25 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.8.90
 - Make koji and mock optional modules that can be shipped as separate
