--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+* Thu Jun 29 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.10.1
+- Change goc-* promotion routes to use osg 3.4
+- Change default promotion routes to use osg 3.4
+- Drop el5 promotion route for hcc (SOFTWARE-2730)
+- Display friendlier error messages in osg-promote.
+
 * Wed Jun 07 2017 Mátyás Selmeci <matyas@cs.wisc.edu> - 1.10.0
 - Drop vdt-build (SOFTWARE-2709)
 - Drop ~/.osg-build.ini (SOFTWARE-2708)
